# gateway-demo

./: Cargo.toml  README.md  stack.yaml
echo/: Cargo.toml
echo/src/: main.rs
gateway/: Cargo.toml
gateway/src/: config.rs  lib.rs  main.rs  registry.rs  reverse_proxy.rs
gateway/src/tests/: test.rs
